Writer implementation